- patches.fixes/pci_aer_mce_inject_check_osc_for_aer.patch: PCI:   AER: fix aer inject result in kernel oops (bnc#566619).

--- a/series.conf
+++ b/series.conf
@@ -899,6 +899,7 @@
 	# PCI and PCI hotplug
 	########################################################
 	patches.fixes/PCIe-AER-reject-aer-inject-if-hardware-mask-error-reporting.patch
+	patches.fixes/pci_aer_mce_inject_check_osc_for_aer.patch
 
 	########################################################
 	# sysfs / driver core
