- patches.arch/x86-Force-irq-complete-move-during-cpu-offline.patch:   x86: Force irq complete move during cpu offline (bnc#558247). - patches.arch/x86-Remove-local_irq_enable-local_irq_disable-in-fixup_irqs.patch:   x86: Remove local_irq_enable()/local_irq_disable() in   fixup_irqs() (bnc#558247). - patches.arch/x86-Remove-move_cleanup_count-from-irq_cfg.patch:   x86: Remove move_cleanup_count from irq_cfg (bnc#558247). - patches.arch/x86-Remove-unnecessary-mdelay-from-cpu_disable_common.patch:   x86: Remove unnecessary mdelay() from cpu_disable_common()   . - patches.arch/x86-Unify-fixup_irqs-for-32-bit-and-64-bit-kernels.patch:   x86: Unify fixup_irqs() for 32-bit and 64-bit kernels   (bnc#558247). - patches.arch/x86-Use-EOI-register-in-io-apic-on-intel-platforms.patch:   x86: Use EOI register in io-apic on intel platforms   (bnc#558247). - patches.arch/x86-intr-remap-Avoid-irq_chip-mask-unmask-in-fixup_irqs-for-intr-remapping.patch:   x86, intr-remap: Avoid irq_chip mask/unmask in fixup_irqs()   for intr-remapping (bnc#558247). - patches.arch/x86-io-apic-Move-the-effort-of-clearing-remoteIRR-explicitly-before-migrating-the-irq.patch:   x86, io-apic: Move the effort of clearing remoteIRR explicitly   before migrating the irq (bnc#558247). - patches.arch/x86-ioapic-Document-another-case-when-level-irq-is-seen-as-an-edge.patch:   x86, ioapic: Document another case when level irq is seen as   an edge (bnc#558247). - patches.arch/x86-ioapic-Fix-the-EOI-register-detection-mechanism.patch:   x86, ioapic: Fix the EOI register detection mechanism   (bnc#558247).

--- a/series.conf
+++ b/series.conf
@@ -240,6 +240,22 @@
 	patches.arch/xpc_pass_nasid_to_gru_create_message_queue.patch
 
         ########################################################
+	# x86_64/i386 depending on the UV patchset
+        ########################################################
+
+	# bug 558247
+	patches.arch/x86-Unify-fixup_irqs-for-32-bit-and-64-bit-kernels.patch
+	patches.arch/x86-intr-remap-Avoid-irq_chip-mask-unmask-in-fixup_irqs-for-intr-remapping.patch
+	patches.arch/x86-Remove-move_cleanup_count-from-irq_cfg.patch
+	patches.arch/x86-Force-irq-complete-move-during-cpu-offline.patch
+	patches.arch/x86-Use-EOI-register-in-io-apic-on-intel-platforms.patch
+	patches.arch/x86-Remove-local_irq_enable-local_irq_disable-in-fixup_irqs.patch
+	patches.arch/x86-io-apic-Move-the-effort-of-clearing-remoteIRR-explicitly-before-migrating-the-irq.patch
+	patches.arch/x86-ioapic-Fix-the-EOI-register-detection-mechanism.patch
+	patches.arch/x86-ioapic-Document-another-case-when-level-irq-is-seen-as-an-edge.patch
+	patches.arch/x86-Remove-unnecessary-mdelay-from-cpu_disable_common.patch
+
+        ########################################################
 	# powerpc/generic
         ########################################################
 	patches.suse/of_platform_driver.module-owner.patch
