--- a/series.conf
+++ b/series.conf
@@ -1271,14 +1271,18 @@
 	patches.xen/xen3-patch-2.6.30
 	patches.xen/xen3-patch-2.6.31
 	patches.xen/xen3-patch-2.6.32
+	patches.xen/xen3-patch-2.6.32.1-2
+	patches.xen/xen3-patch-2.6.32.2-3
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-rlim-0025-x86-add-ia32-compat-prlimit-syscalls.patch
-	patches.xen/xen3-x86-fix-nodac
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-64-preserve-large-page-mapping-for-1st-2mb-kernel-txt-with-config_debug_rodata
 	patches.xen/xen3-x86-64-align-rodata-kernel-section-to-2mb-with-config_debug_rodata
 	patches.xen/xen3-x86-mark_rodata_rw.patch
 	patches.xen/xen3-bug-561933_uv_pat_is_gru_range.patch
+	patches.xen/xen3-x86-Unify-fixup_irqs-for-32-bit-and-64-bit-kernels.patch
+	patches.xen/xen3-x86-intr-remap-Avoid-irq_chip-mask-unmask-in-fixup_irqs-for-intr-remapping.patch
+	patches.xen/xen3-x86-Remove-local_irq_enable-local_irq_disable-in-fixup_irqs.patch
 	patches.xen/xen3-kdb-x86
 	patches.xen/xen3-stack-unwind
 	patches.xen/xen3-x86_64-unwind-annotations
@@ -1290,7 +1294,6 @@
 	patches.xen/xen-blkif-protocol-fallback-hack
 	patches.xen/xen-blkback-cdrom
 	patches.xen/xen-blktap-write-barriers
-	patches.xen/xen-scsifront-block-timeout-update
 	patches.xen/xen-op-packet
 	patches.xen/xen-blkfront-cdrom
 	patches.xen/xen-sections
@@ -1321,6 +1324,3 @@
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
 	patches.xen/xen-x86_64-nx-user-mappings
-
-	patches.xen/xen-fix-compilation-after-rename_generic_int.patch
-
