- patches.arch/module-handle-ppc64-relocating-kcrctabs-when-config_relocatable-y:   module: handle ppc64 relocating kcrctabs when   CONFIG_RELOCATABLE=y (bnc#566243).

--- a/series.conf
+++ b/series.conf
@@ -299,6 +299,7 @@
 	patches.arch/ppc-extended_h_cede-add_driver_lock
 	patches.fixes/powerpc-fix-cpu-name-in-show-cpuinfo
 	patches.fixes/ppc-crashdump-typefix
+	patches.arch/module-handle-ppc64-relocating-kcrctabs-when-config_relocatable-y
 
         ########################################################
         # PS3
