- Disabled set,getprlimit syscalls until the syscall numbers   have been officially reserved.

--- a/series.conf
+++ b/series.conf
@@ -131,7 +131,10 @@
 	patches.suse/rlim-0020-misc-use-helpers-for-rlimits.patch
 	patches.suse/rlim-0021-core-rename-setrlimit-to-do_setrlimit.patch
 	patches.suse/rlim-0022-core-implement-getprlimit-and-setprlimit-syscalls.patch
-	patches.suse/rlim-0023-unistd-add-__NR_-get-set-prlimit-syscall-numbers.patch
+
+	# This patch is disabled until the syscall numbers have been
+	# officially reserved in the mainline kernel. Send questions to jeffm.
+	# patches.suse/rlim-0023-unistd-add-__NR_-get-set-prlimit-syscall-numbers.patch
 	patches.suse/rlim-0024-COMPAT-add-get-put_compat_rlimit.patch
 	patches.suse/rlim-0025-x86-add-ia32-compat-prlimit-syscalls.patch
  
