- Disable set,getprlimit compat syscalls on xen.

--- a/series.conf
+++ b/series.conf
@@ -1278,7 +1278,8 @@
 	patches.xen/xen3-patch-2.6.32.1-2
 	patches.xen/xen3-patch-2.6.32.2-3
 	patches.xen/xen3-seccomp-disable-tsc-option
-	patches.xen/xen3-rlim-0025-x86-add-ia32-compat-prlimit-syscalls.patch
+	# Disabled until the syscalls have been properly reserved
+	# patches.xen/xen3-rlim-0025-x86-add-ia32-compat-prlimit-syscalls.patch
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-64-preserve-large-page-mapping-for-1st-2mb-kernel-txt-with-config_debug_rodata
 	patches.xen/xen3-x86-64-align-rodata-kernel-section-to-2mb-with-config_debug_rodata
