- patches.fixes/quota-fix-reserved-space-management-for-ordinary-fs.patch:   quota: fix reserved space management for ordinary fs.

--- a/series.conf
+++ b/series.conf
@@ -567,6 +567,7 @@
 	patches.suse/nfs4acl-ext3.diff
 	patches.suse/nfs4acl-ai.diff
 	patches.fixes/zisofs-large-pagesize-read.patch
+	patches.fixes/quota-fix-reserved-space-management-for-ordinary-fs.patch
 
 	
 	########################################################
