- patches.fixes/scsi-dh-rdac-add-ibm-174x: scsi_dh_rdac: Add   two new IBM devices (bnc# 556159).

--- a/series.conf
+++ b/series.conf
@@ -663,6 +663,7 @@
 	patches.fixes/scsi-dh-emc-mode-select-10-size
 	patches.fixes/scsi-dh-emc-rw-mismatch
 	patches.fixes/scsi-dh-rdac-add-stk
+	patches.fixes/scsi-dh-rdac-add-ibm-174x
 	patches.fixes/scsi-retry-alua-transition-in-progress
 	patches.fixes/fc-transport-remove-BUG_ON
 	patches.fixes/lpfc-ia64-hang
