- patches.drivers/mpt2sas-03.100.03.00-update: LSI mptsas2 driver   update to 03.100.03.00 (bnc#566013).

--- a/series.conf
+++ b/series.conf
@@ -675,6 +675,7 @@
 	patches.drivers/qla2xxx-8.03.01-k7-update
 	patches.drivers/lpfc-add-raywire-id
 	patches.drivers/megaraid-mbox-fix-SG_IO
+	patches.drivers/mpt2sas-03.100.03.00-update
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
