- patches.fixes/fcoe-libfc-adds-enable-di: adds enable/disable   for fcoe interface (bnc#562046). - patches.fixes/fcoe-use-lld-s-wwpn-and-w: Use LLD's WWPN and   WWNN for lport if LLD supports ndo_fcoe_get_wwn (bnc#562046). - patches.fixes/libfc-reduce-hold-time-on: reduce hold time on   SCSI host lock (bnc#562046). - patches.fixes/libfc-remote-port-gets-st: remote port gets   stuck in restart state without really restarting (bnc#562046).

--- a/series.conf
+++ b/series.conf
@@ -864,6 +864,10 @@
 	patches.fixes/fcoe-libfc-add-get_lesb-t
 	patches.fixes/libfc-add-support-of-rece
 	patches.fixes/libfc-add-target-reset-fl
+	patches.fixes/fcoe-use-lld-s-wwpn-and-w
+	patches.fixes/libfc-remote-port-gets-st
+	patches.fixes/libfc-reduce-hold-time-on
+	patches.fixes/fcoe-libfc-adds-enable-di
 
 	# ixgbe patches from 2.6.33 bnc#562046
 	patches.drivers/dcb-data-center-bridging-ops-s
