- patches.drivers/bfa-2.1.2.1-update: Update bfa driver to   version 2.1.2.1 (bnc#561881).

--- a/series.conf
+++ b/series.conf
@@ -676,6 +676,7 @@
 	patches.drivers/lpfc-add-raywire-id
 	patches.drivers/megaraid-mbox-fix-SG_IO
 	patches.drivers/mpt2sas-03.100.03.00-update
+	patches.drivers/bfa-2.1.2.1-update
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
