- patches.drivers/qla4xxx-5.01.00-k9-5.01.00.00.11.01-k10.patch:   Update qla4xxx driver for SLES11 SP1 (bnc#556572,FATE#307128).

--- a/series.conf
+++ b/series.conf
@@ -677,6 +677,7 @@
 	patches.drivers/megaraid-mbox-fix-SG_IO
 	patches.drivers/mpt2sas-03.100.03.00-update
 	patches.drivers/bfa-2.1.2.1-update
+	patches.drivers/qla4xxx-5.01.00-k9-5.01.00.00.11.01-k10.patch
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
