- patches.suse/readahead-request-tunables.patch: Update readahead   and max_sectors tunables (bnc#548529).

--- a/series.conf
+++ b/series.conf
@@ -385,6 +385,7 @@
 	patches.suse/mm-devzero-optimisation.patch
 
 	patches.fixes/aggressive-zone-reclaim.patch
+	patches.suse/readahead-request-tunables.patch
 
         ########################################################
         # IPC patches
