- patches.fixes/nohz_prevent_clocksource_wrapping_during_idle.patch:   nohz: Prevent clocksource wrapping during idle (bnc#569238).

--- a/series.conf
+++ b/series.conf
@@ -137,6 +137,7 @@
 
 	patches.fixes/nohz-delay-from-tip.diff
 	patches.fixes/reuse-ktime-from-tip.diff
+	patches.fixes/nohz_prevent_clocksource_wrapping_during_idle.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
