- Update to 2.6.33-rc3-git5.

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.33-rc3
 	patches.kernel.org/patch-2.6.33-rc3-git3
+	patches.kernel.org/patch-2.6.33-rc3-git3-git5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
