- patches.drivers/alsa-sp1-hda-53-alc861vd-capture-fix: ALSA:   hda - Fix ALC861-VD capture source mixer (bnc#568305).

--- a/series.conf
+++ b/series.conf
@@ -1010,6 +1010,7 @@
 	patches.drivers/alsa-sp1-hda-49-more-alc663-fixes
 	patches.drivers/alsa-sp1-hda-51-fix-maxdata-obook4-quirk
 	patches.drivers/alsa-sp1-hda-52-hdmi-sticky-stream-tag
+	patches.drivers/alsa-sp1-hda-53-alc861vd-capture-fix
 
 	########################################################
 	# Other driver fixes
