- patches.fixes/signal-fix-kernel-information-leak-with-print-fatal-signals-1:   kernel/signal.c: fix kernel information leak with   print-fatal-signals=1 (bnc#569902).

--- a/series.conf
+++ b/series.conf
@@ -138,6 +138,7 @@
 	patches.fixes/nohz-delay-from-tip.diff
 	patches.fixes/reuse-ktime-from-tip.diff
 	patches.fixes/nohz_prevent_clocksource_wrapping_during_idle.patch
+	patches.fixes/signal-fix-kernel-information-leak-with-print-fatal-signals-1
 
         ########################################################
         # Architecture-specific patches. These used to be all
