- patches.fixes/ppc-crashdump-typefix: Renamed to patches.rpmify/ppc-crashdump-typefix

--- a/series.conf
+++ b/series.conf
@@ -55,6 +55,7 @@
 	patches.rpmify/hpsa-fix-section-mismatch
 	patches.rpmify/rt2860-fix-section-mismatches
 	patches.rpmify/virtio-fix-section-mismatch-warnings
+	patches.rpmify/ppc-crashdump-typefix
 
         ########################################################
         # kABI consistency patches
