- patches.rpmify/autoconf-h-fix-locations: autoconf.h: Fix   locations.

--- a/series.conf
+++ b/series.conf
@@ -56,6 +56,7 @@
 	patches.rpmify/rt2860-fix-section-mismatches
 	patches.rpmify/virtio-fix-section-mismatch-warnings
 	patches.rpmify/ppc-crashdump-typefix
+	patches.rpmify/autoconf-h-fix-locations
 
         ########################################################
         # kABI consistency patches
