- rpm/kernel-binary.spec.in, rpm/find-provides: extract exported   symbols from /boot/vmlinux before the image is stripped (affects   ppc).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -393,6 +393,9 @@ add_vmlinux()
         # make vmlinux executable so that find-debuginfo.sh picks it up
         # (TODO: fix find-debuginfo.sh instead)
         chmod +x %buildroot/$vmlinux
+        # exctact the provided symbols before they are stripped away
+        echo %buildroot/$vmlinux | /usr/lib/rpm/find-provides.ksyms > \
+            %buildroot/$vmlinux.provides
     fi
 %endif
     if $compressed; then
@@ -639,6 +642,7 @@ done
 {   cd %buildroot
     find boot \
 	\( -type l -o -name 'initrd-*' \) -printf '%%%%ghost /%%p\n' -o \
+	-type f -name 'vmlinux-*.provides' -prune -o \
 	-type f -name 'vmlinux-*' -printf '%%%%attr(0644, root, root) /%%p\n' -o \
         -type f -printf '/%%p\n'
 
