- patches.suse/bootsplash-keep-multiple-data: Keep multiple   splash screens for KMS (bnc#570082). - patches.suse/bootsplash-scaler: Add bootsplash image scaler   (bnc#570082).

--- a/series.conf
+++ b/series.conf
@@ -952,6 +952,8 @@
 	########################################################
 	patches.suse/bootsplash
 	patches.suse/Cleanup-and-make-boot-splash-work-with-KMS.patch
+	patches.suse/bootsplash-keep-multiple-data
+	patches.suse/bootsplash-scaler
 	patches.drivers/elousb.patch
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.fixes/hid-fixup-ncr-quirk.patch
