--- a/series.conf
+++ b/series.conf
@@ -28,8 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-2.6.33-rc3
-	patches.kernel.org/patch-2.6.33-rc3-git3
-	patches.kernel.org/patch-2.6.33-rc3-git3-git5
+	patches.kernel.org/patch-2.6.33-rc3-rc4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -179,7 +178,6 @@
 	patches.fixes/dmar-fix-oops-with-no-dmar-table
 
 	# bug 567510
-	patches.arch/x86-revert-apic-Use-logical-flat-on-intel-with-8-or-fewer-logical-cpus.patch
 	patches.arch/x86-apic-use-logical-flat-for-systems-with-8-or-fewer-logical-cpus.patch
 
 	########################################################
@@ -571,7 +569,6 @@
 	patches.fixes/tg3-fix-default-wol.patch
 	patches.drivers/ehea-modinfo.patch
 	patches.fixes/tehuti-firmware-name
-	patches.drivers/dmfe-tulip-Let-dmfe-handle-DM910x-except-for-SPARC-o.patch
 
 	# entropy FATE##307517
         patches.drivers/bnx2-entropy-source.patch
