- patches.fixes/crypto-testmgr-fix-complain-about-lacking-test.patch:   crypto: testmgr - Fix complain about lack test for internal   used algorithm (bnc#568278 FATE#306883).

--- a/series.conf
+++ b/series.conf
@@ -181,6 +181,7 @@
 	patches.arch/add_x86_support_for_hpet_msi_intr_remap.patch
 	patches.arch/x86-crypto-pclmulqdq-accelerated-implementation.patch
 	patches.arch/x86-crypto-add-ghash-algorithm-test.patch
+	patches.fixes/crypto-testmgr-fix-complain-about-lacking-test.patch
 	patches.arch/x86-mcp51-no-dac
 
 	patches.arch/kvm-split-paravirt-ops-by-functionality
