--- a/series.conf
+++ b/series.conf
@@ -716,6 +716,7 @@
 	patches.drivers/ehea-modinfo.patch
 	patches.drivers/igb-add-support-for-82576NS-SerDes-adapter.patch
 	patches.fixes/tehuti-firmware-name
+	patches.drivers/dmfe-tulip-Let-dmfe-handle-DM910x-except-for-SPARC-o.patch
 
 	# entropy FATE##307517
         patches.drivers/bnx2-entropy-source.patch
