- rpm/find-provides, rpm/kernel-binary.spec.in: really fix ppc   symbol provides.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -207,7 +207,7 @@ Obsoletes:      ocfs2-kmp-%build_flavor
 Obsoletes:      quickcam-kmp-%build_flavor < 0.6.7
 
 # Provide the exported symbols as "ksym(symbol) = hash"
-%define __find_provides %_sourcedir/find-provides %name
+%define __find_provides %_sourcedir/find-provides %my_builddir %name
 
 # Will modules not listed in supported.conf abort the kernel build (0/1)?
 %define supported_modules_check 0
@@ -394,8 +394,8 @@ add_vmlinux()
         # (TODO: fix find-debuginfo.sh instead)
         chmod +x %buildroot/$vmlinux
         # exctact the provided symbols before they are stripped away
-        echo %buildroot/$vmlinux | /usr/lib/rpm/find-provides.ksyms > \
-            %buildroot/$vmlinux.provides
+        echo %buildroot/$vmlinux | /usr/lib/rpm/find-provides.ksyms %name > \
+            %my_builddir/$(basename $vmlinux).provides
     fi
 %endif
     if $compressed; then
