- patches.drivers/alsa-sp1-hda-54-alc861-capture-fix: ALSA: hda -   Fix missing capture mixer for ALC861/660 codecs (bnc#567340).

--- a/series.conf
+++ b/series.conf
@@ -1019,6 +1019,7 @@
 	patches.drivers/alsa-sp1-hda-51-fix-maxdata-obook4-quirk
 	patches.drivers/alsa-sp1-hda-52-hdmi-sticky-stream-tag
 	patches.drivers/alsa-sp1-hda-53-alc861vd-capture-fix
+	patches.drivers/alsa-sp1-hda-54-alc861-capture-fix
 
 	########################################################
 	# Other driver fixes
