- patches.arch/x86-Limit-number-of-per-cpu-TSC-sync-messages.patch:   x86: Limit number of per cpu TSC sync messages (bnc#564618,   FATE#306952). - patches.arch/x86-Limit-the-number-of-processor-bootup-messages.patch:   x86: Limit the number of processor bootup messages (bnc#564618,   FATE#306952). - patches.arch/x86-Remove-CPU-cache-size-output-for-non-Intel-too.patch:   x86: Remove CPU cache size output for non-Intel too (bnc#564618,   FATE#306952). - patches.arch/x86-Remove-enabling-x2apic-message-for-every-CPU.patch:   x86: Remove enabling x2apic message for every CPU (bnc#564618,   FATE#306952). - patches.arch/x86-Remove-the-CPU-cache-size-printks.patch: x86:   Remove the CPU cache size printk's (bnc#564618, FATE#306952). - patches.arch/x86-cpu-mv-display_cacheinfo-cpu_detect_cache_sizes.patch:   x86, cpu: mv display_cacheinfo -> cpu_detect_cache_sizes   (bnc#564618, FATE#306952). - patches.arch/x86-ucode-amd-Load-ucode-patches-once-and-not-separately-of-each-CPU.patch:   x86: ucode-amd: Load ucode-patches once and not separately of   each CPU (bnc#564618, FATE#306952). - patches.fixes/sched-Limit-the-number-of-scheduler-debug-messages.patch:   sched: Limit the number of scheduler debug messages (bnc#564618,   FATE#306952). - patches.fixes/timers-init-Limit-the-number-of-per-cpu-calibration-bootup-messages.patch:   timers, init: Limit the number of per cpu calibration bootup   messages (bnc#564618, FATE#306952).

--- a/series.conf
+++ b/series.conf
@@ -141,6 +141,10 @@
 	patches.fixes/nohz_prevent_clocksource_wrapping_during_idle.patch
 	patches.fixes/signal-fix-kernel-information-leak-with-print-fatal-signals-1
 
+	# bug #564618
+	patches.fixes/timers-init-Limit-the-number-of-per-cpu-calibration-bootup-messages.patch
+	patches.fixes/sched-Limit-the-number-of-scheduler-debug-messages.patch
+
         ########################################################
         # Architecture-specific patches. These used to be all
         # at the end of series.conf, but since we don't do
@@ -194,6 +198,14 @@
 	patches.arch/x86-64-add-comment-for-rodata-large-page-retainment
 	patches.suse/x86-mark_rodata_rw.patch
 	patches.fixes/dmar-fix-oops-with-no-dmar-table
+
+	# bug 564618
+	patches.arch/x86-Remove-the-CPU-cache-size-printks.patch
+	patches.arch/x86-Remove-CPU-cache-size-output-for-non-Intel-too.patch
+	patches.arch/x86-cpu-mv-display_cacheinfo-cpu_detect_cache_sizes.patch
+	patches.arch/x86-Limit-the-number-of-processor-bootup-messages.patch
+	patches.arch/x86-Remove-enabling-x2apic-message-for-every-CPU.patch
+	patches.arch/x86-ucode-amd-Load-ucode-patches-once-and-not-separately-of-each-CPU.patch
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
