- patches.fixes/Ocfs2-Let-ocfs2-support-fiemap-for-symlink-and-fast-.patch:   Ocfs2: Let ocfs2 support fiemap for symlink and fast symlink.. - patches.fixes/Ocfs2-Should-ocfs2-support-fiemap-for-S_IFDIR-inode.patch:   Ocfs2: Should ocfs2 support fiemap for S_IFDIR inode?. - patches.fixes/ocfs-stop-using-do_sync_mapping_range.patch:   ocfs: stop using do_sync_mapping_range. - patches.fixes/ocfs2-Add-reflinked-file-s-inode-to-inode-hash-earil.patch:   ocfs2: Add reflinked file's inode to inode hash eariler.. - patches.fixes/ocfs2-Find-proper-end-cpos-for-a-leaf-refcount-block.patch:   ocfs2: Find proper end cpos for a leaf refcount block.. - patches.fixes/ocfs2-Set-i_nlink-properly-during-reflink.patch:   ocfs2: Set i_nlink properly during reflink.. - patches.fixes/ocfs2-always-include-acl-support.patch: ocfs2:   Always include ACL support. - patches.fixes/ocfs2-cluster-Make-fence-method-configurable-v2.patch:   ocfs2/cluster: Make fence method configurable - v2. - patches.fixes/ocfs2-devel-remove-redundant-OCFS2_MOUNT_POSIX_ACL-c.patch:   ocfs2-devel: remove redundant OCFS2_MOUNT_POSIX_ACL check   in ocfs2_get_acl_nolock(). - patches.fixes/ocfs2-explicit-declare-uninitialized-var-in-user_clu.patch:   ocfs2: explicit declare uninitialized var in   user_cluster_connect(). - patches.fixes/ocfs2-make-acl-use-the-default.patch: ocfs2:   Make acl use the default. - patches.fixes/ocfs2-refcounttree.c-cleanup.patch: ocfs2:   refcounttree.c cleanup.. - patches.fixes/ocfs2-replace-u8-by-__u8-in-ocfs2_fs.h.patch:   ocfs2: replace u8 by __u8 in ocfs2_fs.h. - patches.fixes/ocfs2-return-EAGAIN-instead-of-EAGAIN-in-dlm.patch:   ocfs2: return -EAGAIN instead of EAGAIN in dlm. - patches.fixes/ocfs2-set-MS_POSIXACL-on-remount.patch: ocfs2:   Set MS_POSIXACL on remount. - patches.fixes/ocfs2-trivial-Use-le16_to_cpu-for-a-disk-value-in-xa.patch:   ocfs2/trivial: Use le16_to_cpu for a disk value in xattr.c. - patches.fixes/ocfs2-trivial-Use-proper-mask-for-2-places-in-hearbe.patch:   ocf

--- a/series.conf
+++ b/series.conf
@@ -546,6 +546,27 @@
 	########################################################
 	# ocfs2
 	########################################################
+	# ocfs2 fixes from 2.6.32
+	patches.fixes/ocfs2-always-include-acl-support.patch
+	patches.fixes/ocfs2-make-acl-use-the-default.patch
+	patches.fixes/ocfs2-set-MS_POSIXACL-on-remount.patch
+	patches.fixes/ocfs2-Find-proper-end-cpos-for-a-leaf-refcount-block.patch
+	patches.fixes/ocfs2-refcounttree.c-cleanup.patch
+	patches.fixes/ocfs2-cluster-Make-fence-method-configurable-v2.patch
+	patches.fixes/ocfs2-return-EAGAIN-instead-of-EAGAIN-in-dlm.patch
+	patches.fixes/ocfs-stop-using-do_sync_mapping_range.patch
+	patches.fixes/ocfs2-devel-remove-redundant-OCFS2_MOUNT_POSIX_ACL-c.patch
+	patches.fixes/ocfs2-explicit-declare-uninitialized-var-in-user_clu.patch
+	patches.fixes/ocfs2-replace-u8-by-__u8-in-ocfs2_fs.h.patch
+	patches.suse/fiemap-Add-new-extent-flag-FIEMAP_EXTENT_SHARED.patch
+	patches.suse/ocfs2-Use-FIEMAP_EXTENT_SHARED.patch
+	patches.fixes/Ocfs2-Should-ocfs2-support-fiemap-for-S_IFDIR-inode.patch
+	patches.fixes/ocfs2-Add-reflinked-file-s-inode-to-inode-hash-earil.patch
+	patches.fixes/ocfs2-Set-i_nlink-properly-during-reflink.patch
+	patches.fixes/Ocfs2-Let-ocfs2-support-fiemap-for-symlink-and-fast-.patch
+	patches.fixes/ocfs2-trivial-Use-proper-mask-for-2-places-in-hearbe.patch
+	patches.fixes/ocfs2-trivial-Use-le16_to_cpu-for-a-disk-value-in-xa.patch
+
 	patches.suse/ocfs2-allocation-resrvations.patch
 
 	########################################################
