--- a/series.conf
+++ b/series.conf
@@ -271,7 +271,7 @@
 	patches.fixes/grab-swap-token-oops
 
 +needs_update-32	patches.suse/osync-error
-+still_needed?-33	patches.fixes/remount-no-shrink-dcache
+	patches.fixes/remount-no-shrink-dcache
 +needs_update-32	patches.suse/reiser4-sync_inodes
 	patches.suse/reiser4-set_page_dirty_notag
 	patches.suse/file-capabilities-disable-by-default.diff
