- patches.suse/kdb_dont_touch_i8042_early.patch: Avoid early   hang when i8042 controller is missing (bnc#528811).

--- a/series.conf
+++ b/series.conf
@@ -1162,6 +1162,7 @@
 	patches.suse/kdb-x86-build-fixes
 	patches.suse/kdb-usb-rework
 	patches.suse/kdb_fix_ia64_build.patch
+	patches.suse/kdb_dont_touch_i8042_early.patch
 
         ########################################################
         # Other patches for debugging
