- patches.fixes/hid-add-device-ids-for-new-model-of-apple-wireless-keyboard:   HID: add device IDs for new model of Apple Wireless Keyboard   (bnc#568231).

--- a/series.conf
+++ b/series.conf
@@ -993,6 +993,7 @@
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.fixes/hid-fixup-ncr-quirk.patch
 	patches.drivers/synaptics-hp-clickpad
+	patches.fixes/hid-add-device-ids-for-new-model-of-apple-wireless-keyboard
 
 	##########################################################
 	# Sound
