--- a/series.conf
+++ b/series.conf
@@ -716,6 +716,8 @@
 	patches.drivers/bfa-2.1.2.1-update
 	patches.drivers/qla4xxx-5.01.00-k9-5.01.00.00.11.01-k10.patch
 
+	patches.drivers/vmw_pvscsi-scsi-driver-for-vmware-s-virtual-hba.patch
+
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
 	patches.fixes/scsi-scan-blist-update
