- patches.xen/xen-x86-rename-display_cacheinfo-to-cpu_detect_cache_sizes.patch:   x86: Rename display_cacheinfo() to cpu_detect_cache_sizes().

--- a/series.conf
+++ b/series.conf
@@ -1380,3 +1380,4 @@
 	patches.xen/xen-x86_64-pgd-alloc-order
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
+	patches.xen/xen-x86-rename-display_cacheinfo-to-cpu_detect_cache_sizes.patch
