--- a/series.conf
+++ b/series.conf
@@ -715,6 +715,7 @@
 	patches.drivers/mpt2sas-03.100.03.00-update
 	patches.drivers/bfa-2.1.2.1-update
 	patches.drivers/qla4xxx-5.01.00-k9-5.01.00.00.11.01-k10.patch
+	patches.fixes/aic79xx-null-scb-in-nonpkt-busfree
 
 	patches.drivers/vmw_pvscsi-scsi-driver-for-vmware-s-virtual-hba.patch
 
