- patches.fixes/reiserfs-truncate-blocks-not-used-by-a-write.patch:   reiserfs: truncate blocks not used by a write (bnc#483375).

--- a/series.conf
+++ b/series.conf
@@ -532,6 +532,7 @@
 	########################################################
 	patches.fixes/reiserfs-replay-honor-ro
 	patches.suse/reiserfs-barrier-default
+	patches.fixes/reiserfs-truncate-blocks-not-used-by-a-write.patch
 
 	########################################################
 	# dlm
