- patches.drivers/alsa-sp1-hda-55-alc259-hp-pin-fix: ALSA: hda -   Fix parsing pin node 0x21 on ALC259 (bnc#571879). - patches.drivers/alsa-sp1-hda-56-realtek-eapd-fix: ALSA: hda -   Turn on EAPD only if available for Realtek codecs (bnc#571879).

--- a/series.conf
+++ b/series.conf
@@ -1054,6 +1054,8 @@
 	patches.drivers/alsa-sp1-hda-52-hdmi-sticky-stream-tag
 	patches.drivers/alsa-sp1-hda-53-alc861vd-capture-fix
 	patches.drivers/alsa-sp1-hda-54-alc861-capture-fix
+	patches.drivers/alsa-sp1-hda-55-alc259-hp-pin-fix
+	patches.drivers/alsa-sp1-hda-56-realtek-eapd-fix
 
 	########################################################
 	# Other driver fixes
