--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.33-rc3
 	patches.kernel.org/patch-2.6.33-rc3-rc4
+	patches.kernel.org/patch-2.6.33-rc4-git7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -52,9 +53,7 @@
 	patches.rpmify/acpi-fix-section-mismatch
 	patches.rpmify/hpsa-fix-section-mismatch
 	patches.rpmify/rt2860-fix-section-mismatches
-	patches.rpmify/virtio-fix-section-mismatch-warnings
 	patches.rpmify/ppc-crashdump-typefix
-	patches.rpmify/autoconf-h-fix-locations
 
         ########################################################
         # kABI consistency patches
@@ -109,8 +108,6 @@
 
 	# writable limits
 	patches.suse/rlim-0005-core-posix-cpu-timers-cleanup-rlimits-usage.patch
-	patches.suse/rlim-0006-PPC-use-helpers-for-rlimits.patch
-	patches.suse/rlim-0007-S390-use-helpers-for-rlimits.patch
 	patches.suse/rlim-0008-SPARC-use-helpers-for-rlimits.patch
 	patches.suse/rlim-0009-X86-use-helpers-for-rlimits.patch
 	patches.suse/rlim-0010-FS-use-helpers-for-rlimits.patch
@@ -176,9 +173,6 @@
 
 	patches.suse/x86-mark_rodata_rw.patch
 	patches.fixes/dmar-fix-oops-with-no-dmar-table
-
-	# bug 567510
-	patches.arch/x86-apic-use-logical-flat-for-systems-with-8-or-fewer-logical-cpus.patch
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
