- patches.drivers/bnx2i-backport-from-v2.6.32-to-45ca38e.patch:   bnx2i: Backport from v2.6.32 to 45ca38e (bnc#564640). - patches.drivers/bnx2x-backports-v2.6.32-to-af901ca.patch:   bnx2x: backports v2.6.32 to af901ca (bnc#564638). - patches.drivers/cnic-backport-from-v2.6.32-4e9c4f.patch: cnic:   backport from v2.6.32-4e9c4f (bnc#564640).

--- a/series.conf
+++ b/series.conf
@@ -943,6 +943,8 @@
 	patches.drivers/e1000-enhance-frame-fragment-detection.patch
 	patches.drivers/e1000e-enhance-frame-fragment-detection.patch
 
+	patches.drivers/bnx2x-backports-v2.6.32-to-af901ca.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
@@ -952,11 +954,13 @@
 	# iSCSI
 	########################################################
 	patches.fixes/bnx2i-use-common-iscsi-suspend-queue
+	patches.drivers/bnx2i-backport-from-v2.6.32-to-45ca38e.patch
 	patches.fixes/libiscsi-fix-login-text-checks-in-pdu-inject
 	patches.fixes/libiscsi-check-tmf-state-before-sending-pdu
 	patches.fixes/libiscsi-add-warm-target-reset-tmf-support
 	patches.fixes/iscsi-class-modify-handling-of-replacement-time
 	patches.fixes/iser-set-tgt-and-lu-reset-timeout
+	patches.drivers/cnic-backport-from-v2.6.32-4e9c4f.patch
 
 	########################################################
 	# PCI and PCI hotplug
