- patches.drivers/add-support-for-intel-cougar-point-chipset.patch:   Intel Cougar Point PCH Support (FATE#308854 bnc#565845).

--- a/series.conf
+++ b/series.conf
@@ -1072,6 +1072,7 @@
 
 	patches.fixes/enclosure-fix-oops-while-iterating-enclosure_status-array
 	patches.drivers/watchdog-iTCO_wdt-Add-support-for-Intel-Ibex-Peak.patch
+	patches.drivers/add-support-for-intel-cougar-point-chipset.patch
 
 	########################################################
 	# Other drivers we have added to the tree
