--- a/series.conf
+++ b/series.conf
@@ -713,6 +713,8 @@
 	patches.drivers/bfa-2.1.2.1-update
 	patches.drivers/qla4xxx-5.01.00-k9-5.01.00.00.11.01-k10.patch
 	patches.fixes/aic79xx-null-scb-in-nonpkt-busfree
+	patches.drivers/lpfc-8.3.5-update
+	patches.drivers/lpfc-8.3.5.3-update
 
 	patches.drivers/vmw_pvscsi-scsi-driver-for-vmware-s-virtual-hba.patch
 
