--- a/series.conf
+++ b/series.conf
@@ -1384,6 +1384,7 @@
 	patches.xen/xen-unpriv-build
 	patches.xen/xen-vmalloc_32
 	patches.xen/xen-dcdbas
+	patches.xen/xen-privcmd-mmap-batch-clear
 	patches.xen/xen-x86-panic-no-reboot
 	patches.xen/xen-x86-dcr-fallback
 	patches.xen/xen-x86-consistent-nmi
