- patches.drivers/netxen-8f9b3f-to-c651a8.patch: netxen: 8f9b3f   to c651a8 (bnc#572832).

--- a/series.conf
+++ b/series.conf
@@ -894,6 +894,7 @@
 	patches.drivers/netxen-0020-remove-PCI-IDs-of-CNA-device.patch
 	patches.drivers/netxen-0021-fix-debug-tools-access-for-NX2031.patch
 	patches.drivers/netxen-0022-fix-failure-cases-for-fw-hang-recovery.patch
+	patches.drivers/netxen-8f9b3f-to-c651a8.patch
 
 	# fcoe patches from 2.6.33 bnc#562046
 	patches.fixes/libfc-fix-payload-size-pa
