- patches.arch/s390-06-01-zfcp-introduce-bsg-timeout-callback.patch:   zfcp: introduce BSG timeout callback (BNC#572659). - patches.arch/s390-06-02-zfcp-set-hw-timeout-requested-by-bsg.patch:   zfcp: set HW timeout requested by BSG request (BNC#572659).

--- a/series.conf
+++ b/series.conf
@@ -375,6 +375,9 @@
 	patches.arch/s390-05-15-dasd-s390dbf-strings.patch
 	patches.arch/s390-05-16-dasd-wait-lcu-setup.patch
 
+	patches.arch/s390-06-01-zfcp-introduce-bsg-timeout-callback.patch
+	patches.arch/s390-06-02-zfcp-set-hw-timeout-requested-by-bsg.patch
+
         ########################################################
         # VM/FS patches
         ########################################################
