- patches.fixes/qla2xxx-restore-pci-state-after-eeh-recovery:   Re-save PCI state after EEH recovery (bnc#570233).

--- a/series.conf
+++ b/series.conf
@@ -720,6 +720,7 @@
 	patches.drivers/lpfc-8.3.5.3-update
 	patches.drivers/vmw_pvscsi-scsi-driver-for-vmware-s-virtual-hba.patch
 	patches.fixes/scsi-fc-class-allow-LLD-bsg-timeout
+	patches.fixes/qla2xxx-restore-pci-state-after-eeh-recovery
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
