--- a/series.conf
+++ b/series.conf
@@ -313,6 +313,7 @@
 	patches.arch/ppc-extended_h_cede-add_offline_states
 	patches.arch/ppc-extended_h_cede-node_offline_online_cpus
 	patches.arch/ppc-extended_h_cede-add_driver_lock
+	patches.arch/ppc-extended_h_cede-update-to-mainline
 	patches.fixes/powerpc-fix-cpu-name-in-show-cpuinfo
 
         ########################################################
