- patches.kernel.org/x86-msr-cpuid-register-enough-minors-for-the-msr-and-cpuid-drivers.patch:   x86, msr/cpuid: Register enough minors for the MSR and CPUID   drivers (bnc#572720).

--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-2.6.32.2-3
 	patches.kernel.org/patch-2.6.32.3-4
 	patches.kernel.org/scsi-enclosure-fix-oops-while-iterating-enclosure_status-array.patch
+	patches.kernel.org/x86-msr-cpuid-register-enough-minors-for-the-msr-and-cpuid-drivers.patch
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
