- patches.arch/x86-apic-use-logical-flat-for-systems-with-8-or-fewer-logical-cpus.patch:   x86, apic: use logical flat for systems with <= 8 logical cpus   (bnc#567510). - patches.arch/x86-revert-apic-Use-logical-flat-on-intel-with-8-or-fewer-logical-cpus.patch:   x86: Revert "apic: Use logical flat on intel with <= 8 logical   cpus" (bnc#567510).

--- a/series.conf
+++ b/series.conf
@@ -209,6 +209,10 @@
 	patches.arch/x86-Remove-enabling-x2apic-message-for-every-CPU.patch
 	patches.arch/x86-ucode-amd-Load-ucode-patches-once-and-not-separately-of-each-CPU.patch
 
+	# bug 567510
+	patches.arch/x86-revert-apic-Use-logical-flat-on-intel-with-8-or-fewer-logical-cpus.patch
+	patches.arch/x86-apic-use-logical-flat-for-systems-with-8-or-fewer-logical-cpus.patch
+
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
         ########################################################
