- patches.arch/x86-irq-check-move_in_progress-before-freeing-the-vector-mapping.patch:   x86, irq: Check move_in_progress before freeing the vector   mapping (bnc#558247).

--- a/series.conf
+++ b/series.conf
@@ -278,6 +278,7 @@
 	patches.arch/x86-ioapic-Fix-the-EOI-register-detection-mechanism.patch
 	patches.arch/x86-ioapic-Document-another-case-when-level-irq-is-seen-as-an-edge.patch
 	patches.arch/x86-Remove-unnecessary-mdelay-from-cpu_disable_common.patch
+	patches.arch/x86-irq-check-move_in_progress-before-freeing-the-vector-mapping.patch
 
         ########################################################
 	# powerpc/generic
