- patches.drivers/tg3-updates-from-f4188d-to-ba5b0bf.patch: tg3:   updates from f4188d to ba5b0bf (bnc#573237).

--- a/series.conf
+++ b/series.conf
@@ -774,6 +774,7 @@
 
 	patches.drivers/phy-broadcom-bug-fixes-for-sp1.patch
 	patches.drivers/tg3-update-version-to-3.104.patch
+	patches.drivers/tg3-updates-from-f4188d-to-ba5b0bf.patch
 
 	patches.drivers/sky2-add-register-definitions
 	patches.drivers/sky2-88E8059-support
