- patches.arch/x86_enable_tsc_sync_check_again.patch: x86:   Reenable TSC sync check at boot, even with NONSTOP_TSC   (bnc#573379).

--- a/series.conf
+++ b/series.conf
@@ -213,6 +213,7 @@
 	patches.arch/x86-revert-apic-Use-logical-flat-on-intel-with-8-or-fewer-logical-cpus.patch
 	patches.arch/x86-apic-use-logical-flat-for-systems-with-8-or-fewer-logical-cpus.patch
 
+	patches.arch/x86_enable_tsc_sync_check_again.patch
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
         ########################################################
