--- a/series.conf
+++ b/series.conf
@@ -1070,6 +1070,8 @@
 	patches.drivers/alsa-sp1-hda-52-hdmi-sticky-stream-tag
 	patches.drivers/alsa-sp1-hda-55-alc259-hp-pin-fix
 	patches.drivers/alsa-sp1-hda-56-realtek-eapd-fix
+	patches.drivers/alsa-sp1-hda-57-cx5051-toshiba-quirk
+	patches.drivers/alsa-sp1-hda-58-cx5051-lenovo-mute-fix
 
 	########################################################
 	# Other driver fixes
