- Update config files. - patches.arch/x86_mce_intel_decode_physical_address.patch: x86,   mce: Xeon75xx specific interface to get corrected memory error   information (bnc#573380, fate#307738). - patches.arch/x86_mce_intel_decode_physical_address_compile_fix.patch:   x86, mce: Xeon75xx specific interface to get corrected memory   error information (bnc#573380, fate#307738). - patches.arch/x86_mce_intel_decode_physical_address_rename_fix.patch:   x86, mce: Rename cpu_specific_poll to mce_cpu_specific_poll   (bnc#573380, fate#307738). - patches.xen/xen3-auto-arch-x86.diff: Refresh.

--- a/series.conf
+++ b/series.conf
@@ -227,6 +227,12 @@
 	patches.arch/x86_mce_madvise-locking
 	patches.arch/x86_mce_page-offline
 
+	# Needed on Boxboro/Westmere-EX to correctly decode the physical
+	# address of correctable errors
+	patches.arch/x86_mce_intel_decode_physical_address.patch
+	patches.arch/x86_mce_intel_decode_physical_address_rename_fix.patch
+	patches.arch/x86_mce_intel_decode_physical_address_compile_fix.patch
+
 	########################################################
 	# x86_64/4096CPUS - from SGI
 	########################################################
