- Updated to 2.6.33-rc5.   - Eliminated 2 patches.

--- a/series.conf
+++ b/series.conf
@@ -29,7 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.33-rc3
 	patches.kernel.org/patch-2.6.33-rc3-rc4
-	patches.kernel.org/patch-2.6.33-rc4-git7
+	patches.kernel.org/patch-2.6.33-rc4-rc5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -50,7 +50,6 @@
 	patches.rpmify/hugetlbfs-fix-section-mismatches
 	patches.rpmify/rtl8192e-fix-section-mismatches
 	patches.rpmify/dmar-fix-section-mismatch
-	patches.rpmify/acpi-fix-section-mismatch
 	patches.rpmify/hpsa-fix-section-mismatch
 	patches.rpmify/rt2860-fix-section-mismatches
 	patches.rpmify/ppc-crashdump-typefix
@@ -667,8 +666,6 @@
 	########################################################
 	# md
 	########################################################
-
-	patches.fixes/md-start_ro-fix
 
 	##########################################################
 	#
