- patches.suse/slab-handle-memoryless-nodes-v2a.patch: slab -   handle memoryless nodes V2a (bnc#436025, bnc#570492).

--- a/series.conf
+++ b/series.conf
@@ -651,6 +651,8 @@
 	patches.suse/SoN-29-fix-swap_sync_page-race
 	patches.suse/SoN-30-fix-uninitialized-var.patch
 
+	# don't want to rediff SoN until this gets more testing 
+	patches.suse/slab-handle-memoryless-nodes-v2a.patch
 
 	########################################################
 	# Netfilter
