- supported.conf: Added sparse_keymap (eeepc_laptop depends on it)

--- a/supported.conf
+++ b/supported.conf
@@ -693,6 +693,7 @@
 		kernel/drivers/input/keyboard/sunkbd			# Sun keyboard driver
 		kernel/drivers/input/keyboard/twl4030_keypad
 		kernel/drivers/input/keyboard/xtkbd			# XT keyboard driver
+		kernel/drivers/input/sparse-keymap
 		kernel/drivers/input/misc/apanel
 		kernel/drivers/input/misc/ati_remote
 		kernel/drivers/input/misc/ati_remote2
