misc: use proper tar options
Signed-off-by: Jan Engelhardt <jengelh@medozas.de>

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -150,7 +150,7 @@ cd $RPM_BUILD_ROOT/usr/src
 ln -sf linux%variant linux%variant  # dummy symlink
 
 # Unpack the vanilla kernel sources
-tar xjf %_sourcedir/linux-%srcversion.tar.bz2
+tar -xjf %_sourcedir/linux-%srcversion.tar.bz2
 mv linux-%srcversion linux-%kernelrelease%variant
 
 
