--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -43,7 +43,7 @@
 # Define some CONFIG variables as rpm macros as well. (rpm cannot handle
 # defining them all at once.)
 %define config_vars CONFIG_MODULES CONFIG_KMSG_IDS CONFIG_SPLIT_PACKAGE CONFIG_ENTERPRISE_SUPPORT
-%{expand:%(eval "$(test -n "%cpu_arch_flavor" && tar xfj %_sourcedir/config.tar.bz2 --to-stdout config/%cpu_arch_flavor)"; for config in %config_vars; do echo "%%global $config ${!config:-n}"; done)}
+%{expand:%(eval "$(test -n "%cpu_arch_flavor" && tar -xjf %_sourcedir/config.tar.bz2 --to-stdout config/%cpu_arch_flavor)"; for config in %config_vars; do echo "%%global $config ${!config:-n}"; done)}
 %define split_base (%CONFIG_SPLIT_PACKAGE == "y")
 %define split_extra (%CONFIG_SPLIT_PACKAGE == "y" && %CONFIG_ENTERPRISE_SUPPORT == "y")
 
@@ -583,8 +583,8 @@ if [ %CONFIG_MODULES = y ]; then
 	fi
     fi
 
-    tar cf - -T %my_builddir/obj-files | \
-	tar xf - -C %rpm_install_dir/%cpu_arch_flavor
+    tar -cf - -T %my_builddir/obj-files | \
+	tar -xf - -C %rpm_install_dir/%cpu_arch_flavor
     # bnc#507084
     find %rpm_install_dir/%cpu_arch_flavor/scripts -type f -perm -111 | \
         while read f; do
