--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -151,18 +151,18 @@ ln -sf linux%variant linux%variant  # dummy symlink
 
 # Unpack the vanilla kernel sources
 tar -xjf %_sourcedir/linux-%srcversion.tar.bz2
-mv linux-%srcversion linux-%kernelrelease%variant
+mv linux-%srcversion "%buildroot/%src_install_dir"
 
 
 %if %do_vanilla
-cp -al linux-%kernelrelease%variant linux-%kernelrelease-vanilla
+cp -al "%buildroot/%src_install_dir" linux-%kernelrelease-vanilla
 cd linux-%kernelrelease-vanilla
 %_sourcedir/apply-patches --vanilla %_sourcedir/series.conf %my_builddir %symbols
 rm -f $(find . -name ".gitignore")
 cd ..
 %endif
 
-cd linux-%kernelrelease%variant
+cd "%buildroot/%src_install_dir"
 %_sourcedir/apply-patches %_sourcedir/series.conf %my_builddir %symbols
 rm -f $(find . -name ".gitignore")
 
