kernel-source: split location of files
This topologically separates the kernel source intended for
recompilation from the kernel files inteded for KMP building. It was
the number one reason why people were able to break compilation for
the shipped kernel when they ran `make cloneconfig` or similar in
/usr/src/linux.

Signed-off-by: Jan Engelhardt <jengelh@medozas.de>

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -18,6 +18,9 @@
 # norootforbuild
 # icecream 0
 
+# There are a few packages that do BuildRequire the fullsrc: perf, kernel-doc
+%define build_fullsrc 1
+
 %define srcversion @SRCVERSION@
 %define patchversion @PATCHVERSION@
 %define variant @VARIANT@%{nil}
@@ -27,6 +30,7 @@
 %define src_install_dir usr/src/linux-%kernelrelease%variant
 %define obj_install_dir /%src_install_dir-obj
 %define rpm_install_dir %buildroot%real_install_dir
+%define fullsrc_install_dir usr/src/linux-src-%kernelrelease%variant
 
 Name:           kernel-source@VARIANT@
 Summary:        The Linux Kernel Sources
@@ -49,6 +53,7 @@ Provides:       %name = %version-%source_rel
 Source0:        http://www.kernel.org/pub/linux/kernel/v2.6/linux-%srcversion.tar.bz2
 Source2:        source-post.sh
 Source3:        kernel-source.rpmlintrc
+Source7:	source-postdevel.sh
 Source8:        devel-pre.sh
 Source9:        devel-post.sh
 Source10:       preun.sh
@@ -102,8 +107,6 @@ Source120:      kabi.tar.bz2
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildArch:      noarch
 Prefix:         /usr/src
-# Source is only complete with devel files.
-Requires:	kernel-devel = %version-%release
 
 %(chmod +x %_sourcedir/{apply-patches,guards,check-for-config-changes,kabi.pl,mkspec,compute-PATCHVERSION.sh,arch-symbols})
 
@@ -164,6 +167,9 @@ mkdir -p $RPM_BUILD_ROOT/usr/src
 cd $RPM_BUILD_ROOT/usr/src
 
 ln -sf linux%variant linux%variant  # dummy symlink
+%if %build_fullsrc
+ln -sf linux-src%variant linux-src%variant  # dummy symlink
+%endif
 
 # Unpack the vanilla kernel sources
 tar -xjf %_sourcedir/linux-%srcversion.tar.bz2
@@ -194,7 +200,6 @@ fi
 DOC=$RPM_BUILD_ROOT/usr/share/doc/packages/%name
 mkdir -p $DOC
 cp %_sourcedir/README.SUSE $DOC
-ln -s /usr/share/doc/packages/%name/README.SUSE %buildroot/%src_install_dir/
 
 install -m 755 -d $RPM_BUILD_ROOT/etc/rpm
 install -m 644 %_sourcedir/macros.kernel-source $RPM_BUILD_ROOT/etc/rpm/
@@ -202,26 +207,44 @@ install -m 755 -d $RPM_BUILD_ROOT/usr/lib/rpm
 install -m 644 %_sourcedir/kernel-module-subpackage \
     $RPM_BUILD_ROOT/usr/lib/rpm/
 
-for script in post; do
+for script in post postdevel; do
     sed -e "s:@KERNELRELEASE@:%kernelrelease:g" \
         -e "s:@SRCVARIANT@:%variant:g" \
         %_sourcedir/source-$script.sh > %name-$script.sh
 done
 
 pushd "%buildroot"
+%if %build_fullsrc
+# Explicitly tag source so that user-recompiled kernels
+# are visible in bugreports
+cp -a "%src_install_dir" "%fullsrc_install_dir"
+echo "-%release-LOCAL" >"%fullsrc_install_dir/localversion"
+ln -s "/usr/share/doc/packages/%name/README.SUSE" "%buildroot/%fullsrc_install_dir/"
+%endif
+
 perl "%_sourcedir/group-source-files.pl" \
 	-D "$OLDPWD/devel.files" -N "$OLDPWD/nondevel.files" \
 	-L "%src_install_dir"
+
+# Remove files that are not needed for KMP building
+xargs -ra "$OLDPWD/nondevel.files" rm -f
+find "%src_install_dir" -type d -print0 | sort -rz | \
+	xargs -0 rmdir 2>/dev/null || :
 popd
 
 %post -f %name-post.sh
 
-%post -n kernel-devel -f %name-post.sh
+%post -n kernel-devel -f %name-postdevel.sh
 
-%files -f nondevel.files
+%files
 %defattr(-, root, root)
-%ghost /usr/src/linux%variant
-/usr/src/linux%variant-%kernelrelease/README.SUSE
+%if %build_fullsrc
+/%fullsrc_install_dir
+%endif
+%ghost /usr/src/linux-src%variant
+# The ghost link is always packaged. We need something, or rpmlint will delete
+# the package - which leads to build choosing a previous, mismatching
+# kernel-source when requested as BuildRequires.
 
 %files -n kernel-devel -f devel.files
 %defattr(-,root,root)
