- patches.fixes/pci-fix-nested-spinlock-hang-in-aer_inject.patch:   pci: fix nested spinlock hang in aer_inject (bnc#573578).

--- a/series.conf
+++ b/series.conf
@@ -635,6 +635,7 @@
 	# Allow setting maximum number of raw devices
 	patches.suse/raw_device_max_minors_param.diff
 	patches.suse/no-partition-scan
+	patches.fixes/pci-fix-nested-spinlock-hang-in-aer_inject.patch
 
 	########################################################
 	# Other drivers we have added to the tree
